--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
+    "redux": "^4.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
